modified port in server

--- a/static/viewer.html
+++ b/static/viewer.html
@@ -54,7 +54,7 @@ window.onload=function(){
 
 <div id="ReloadThis">loading chat...</div>
 <hr>
-<form id='myForm' action="http://127.0.0.1:8081/chat" method="get" onSubmit="setTimeout('clearField();',2500);">
+<form id='myForm' action="https://firstproj-mercatino73.c9.io/chat" method="get" onSubmit="setTimeout('clearField();',2500);">
   User Name: <input type="text" name="uid"><br>
   Message: <input id="idmsg" type="text" name="msg">
   <input type="submit" value="Submit" >
