--- a/static/viewer.html
+++ b/static/viewer.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+<title>viewer</title>
+
+
+
 
 <script type="text/javascript">
+
+function saveuid() {
+	var fieldValue = document.getElementById('uid').value;
+	localStorage.setItem('textuid', fieldValue);
+}
+
+function loaduid() {
+	var storedValue = localStorage.getItem('textuid');
+	if(storedValue) {
+		document.getElementById('uid').value = storedValue;
+	}
+}
 
 function clearField(){
   document.forms[0].msg.value = "";
@@ -25,22 +41,24 @@ function ajaxGet(requestedUrl, callbackFunction, channel){
 }
 
 function getMessages(){
-	ajaxGet("./chat.txt",function(){
+	ajaxGet("http://ubuntu-136379.nitrousapp.com:3500/static/chat.txt",function(){
 		if (xmlhttp[0].readyState==4 && xmlhttp[0].status==200){
 			var messages = xmlhttp[0].responseText.split("<br>");
 	 		var last10 = messages.slice(messages.length - 10);
 			var displayMessages = last10.join('<br>');
 	 		document.getElementById('ReloadThis').innerHTML=displayMessages;
-	 		setTimeout('getMessages()',5000);
-		}			
+	 		setTimeout('getMessages()',10000);
+		}
 	},0);
 }
 
 
 function sendMessage(){
+	saveuid();
+
 	var uid = document.getElementById('uid').value;
 	var msg = document.getElementById('idmsg').value;
-	ajaxGet('https://firstproj-mercatino73.c9.io/chat?uid=' +  uid + '&msg=' + msg,function(){
+	ajaxGet('http://ubuntu-136379.nitrousapp.com:3500/chat?uid=' +  uid + '&msg=' + msg,function(){
 				if (xmlhttp[0].readyState==4 && xmlhttp[0].status==200){
 					clearField();
 					//console.log(xmlhttp[1].responseText);
@@ -49,25 +67,29 @@ function sendMessage(){
 }
 
 
-window.onload=function(){	
-	setTimeout('getMessages()',3000);
+window.onload=function(){
+	setTimeout('getMessages()',10000);
 }
 
 
-</script>
 
+
+
+</script>
+</head>
+<body  onLoad="loaduid()">
 <div id="ReloadThis">loading chat...</div>
 <hr>
 <form id='myForm'>
   User Name: <input type="text" name="uid" id="uid"><br>
-  Message: <input id="idmsg" type="text" name="msg">
-  
+  Message: <textarea id="idmsg" type="text" name="msg"  cols="40" rows="5" ></textarea>
+
 
   <!--input type="submit" value="Submit" -->
 </form>
 
 
 <button onclick="sendMessage();">send message</button>
-  
+
 </body>
 </html>
