added chatDisplay Class

--- a/static/chatclient.html
+++ b/static/chatclient.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <title>viewer</title>
 <style>
 .enjoy-css {
@@ -21,7 +22,22 @@
   text-shadow: 4px 4px 6px rgba(0,0,0,0.5) ;
 }
 </style>
+<script src="chatDisplay.js"></script>
 
+</head>
+<body  onLoad="loaduid()">
+<div id="ReloadThis" ></div>
+<hr>
+<form id='myForm'>
+  User Name: <input type="text" name="uid" id="uid"><br>
+  Message: <textarea id="idmsg" type="text" name="msg"  cols="40" rows="5" ></textarea>
+
+
+  <!--input type="submit" value="Submit" -->
+</form>
+
+
+<button onclick="sendMessage();">send message</button>
 <script type="text/javascript">
 var lastMsg=0;
 function saveuid() {
@@ -41,6 +57,7 @@ function clearField(){
 }
 
 var xmlhttp = [];
+var cd = new ChatDisplay('ReloadThis');
 function ajaxGet(requestedUrl, callbackFunction, channel){
 
 	if (window.XMLHttpRequest){
@@ -60,13 +77,23 @@ function getMessages(){
   uid = document.getElementById('uid').value;
 	ajaxGet("../chat?action=get&uid=" + uid +'&lastMsg=' + lastMsg,function(){
 		if (xmlhttp[0].readyState==4 && xmlhttp[0].status==200){
+
       messages=JSON.parse(xmlhttp[0].responseText);
+      cd.update(xmlhttp[0].responseText);
+      console.log(messages);
+      if(messages.length>0){
+        lastMsg =  parseInt(messages[messages.length -1]['msgIndex']);
+      }
+      /*
+      messages=JSON.parse(xmlhttp[0].responseText);
+      console.log(xmlhttp[0].responseText);
       messages.forEach(function(entry) {
         document.getElementById('ReloadThis').innerHTML += entry['nikname'] + ': '+entry['message'] + '<br>'
         console.log(entry);
         lastMsg = parseInt(entry['msgIndex']);
 
       });
+      */
       setTimeout('getMessages()',8000);
 			//var messages = xmlhttp[0].responseText.split("<br>");
 	 		//var last10 = messages.slice(messages.length - 10);
@@ -96,25 +123,6 @@ window.onload=function(){
 	setTimeout('getMessages()',3000);
 }
 
-
-
-
-
 </script>
-</head>
-<body  onLoad="loaduid()">
-<div id="ReloadThis" class="enjoy-css">loading chat...</div>
-<hr>
-<form id='myForm'>
-  User Name: <input type="text" name="uid" id="uid"><br>
-  Message: <textarea id="idmsg" type="text" name="msg"  cols="40" rows="5" ></textarea>
-
-
-  <!--input type="submit" value="Submit" -->
-</form>
-
-
-<button onclick="sendMessage();">send message</button>
-
 </body>
 </html>
