--- a/static/chatclient.html
+++ b/static/chatclient.html
@@ -146,7 +146,7 @@ function getMessages(){
 		if (xmlhttp[0].readyState==4 && xmlhttp[0].status==200){
       messages=JSON.parse(xmlhttp[0].responseText);
       cd.update(xmlhttp[0].responseText);
-      console.log(messages);
+      console.log(xmlhttp[0].responseText);
       if(messages.length>0){
         lastMsg =  parseInt(messages[messages.length -1]['msgIndex']);
       }
@@ -159,20 +159,36 @@ function getMessages(){
 }
 
 function sendMessage(){
+  saveuid();
+  var uid = document.getElementById('uid').value;
   var msg = document.getElementById('idmsg').value;
+  cd.update('[{"msgIndex":' + lastMsg +  ',"nikname":"'+ uid +'","message":"' + msg + '"}]');
+  lastMsg += 1;
+
   if(msg!=''){
-    saveuid();
-    var uid = document.getElementById('uid').value;
+
     ajaxGet('../chat?action=send&uid=' +  uid + '&msg=' + msg,function(){
           if (xmlhttp[0].readyState==4 && xmlhttp[0].status==200){
             clearField();
+
           }
     },1);
+
+    //Todo: add message to cd (ChatDisplay) and increment lastMsg global variable
+//     myLastMsg = new Array();
+//     msg1 = new Object();
+//     msg1['msgIndex']=lastMsg+1;
+//     msg1['nikname']=uid ;
+//     msg1['message']=msg ;
+//     myLastMsg.data.push(msg1);
+//     cd.update(JSON.stringify(myLastMsg));
+//     lastMsg+=1;
+
   }
 }
 
 window.onload=function(){
-	setTimeout('getMessages()',3000);
+	setTimeout('getMessages()',4000);
 }
 </script>
 </body>
