--- a/static/chatclient.html
+++ b/static/chatclient.html
@@ -101,7 +101,7 @@
 <tr><td><input name="uid" id="uid" type="text" class="input_text" placeholder="Nickname"></td></tr><tr><td>
 <textarea id="idmsg"  name="msg"  cols="40" rows="5" class="input_text" placeholder="Write your message here." ></textarea></td><td>
 <div class="send_button" onclick="sendMessage();">Send</div>
-<link async href="http://fonts.googleapis.com/css?family=Advent%20Pro" data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"/>
+<!--link async href="http://fonts.googleapis.com/css?family=Advent%20Pro" data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"/-->
 </td></tr></table>
 
 </form>
