--- a/static/chatclient.html
+++ b/static/chatclient.html
@@ -86,6 +86,22 @@
   overflow: auto;
    max-height: 50vh;
 }
+  body {
+    background-image: url("bgDark.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size:cover
+  }
+
+  html, body {
+        height: 100%;
+        margin: 0px;
+    }
+    #ReloadThis {
+        height: 100%;
+  }
+
 </style>
 <script src="chatDisplay.js"></script>
 </head>
