--- a/static/viewer.html
+++ b/static/viewer.html
@@ -20,6 +20,11 @@
   background: #fff5d1;
   text-shadow: 4px 4px 6px rgba(0,0,0,0.5) ;
 }
+
+  body {
+
+    background-image: url("bgDark.jpg");
+  }
 </style>
 
 
